xml의 모든 뷰 아이디 snake_case 표기로 변경

--- a/app/src/main/res/layout/fragment_detail_series.xml
+++ b/app/src/main/res/layout/fragment_detail_series.xml
@@ -176,7 +176,7 @@
                     android:textColor="?attr/colorOnPrimary" />
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rvSeriesVideos"
+                    android:id="@+id/rv_series_videos"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
