--- a/app/src/main/res/layout/fragment_inventory.xml
+++ b/app/src/main/res/layout/fragment_inventory.xml
@@ -8,7 +8,7 @@
         android:layout_height="match_parent"
         android:fitsSystemWindows="true">
         <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/app_bar"
+            android:id="@+id/appbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
@@ -24,7 +24,7 @@
 
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvSeriesFollowed"
+            android:id="@+id/rv_series_followed"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clipToPadding="false"
