--- a/app/src/main/res/layout/fragment_home_series.xml
+++ b/app/src/main/res/layout/fragment_home_series.xml
@@ -56,7 +56,7 @@
             >
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvCategorys"
+                android:id="@+id/rv_categorys"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="@dimen/home_side_margin"
