--- a/app/src/main/res/layout/list_item_series_followed.xml
+++ b/app/src/main/res/layout/list_item_series_followed.xml
@@ -24,7 +24,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/mySeries_item_thumbnail"
+                android:id="@+id/series_followed_thumbnail"
                 android:layout_width="@dimen/series_item_image_width_normal"
                 android:layout_height="@dimen/series_item_image_height_normal"
                 app:imageFromUrl="@{series.thumbnail}"
@@ -38,7 +38,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/mySeries_item_title"
+                    android:id="@+id/tv_series_followed_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:maxLines="@integer/inventory_descpription_max_lines"
@@ -49,7 +49,7 @@
                     tools:text="Series title" />
 
                 <TextView
-                    android:id="@+id/inventory_item_update_date"
+                    android:id="@+id/tv_series_followed_update_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingStart="@dimen/margin_extra_small"
@@ -59,7 +59,7 @@
             </androidx.appcompat.widget.LinearLayoutCompat>
 
             <androidx.appcompat.widget.AppCompatImageButton
-                android:id="@+id/btnDelete"
+                android:id="@+id/btn_delete"
                 android:layout_width="@dimen/inventory_item_remove_btn_size"
                 android:layout_height="@dimen/inventory_item_remove_btn_size"
                 android:background="@drawable/ic_baseline_remove_circle_outline_24" />
