--- a/app/src/main/res/layout/fragment_home_series.xml
+++ b/app/src/main/res/layout/fragment_home_series.xml
@@ -46,10 +46,10 @@
             app:isGone="@{!viewModel.isLoading}" />
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/layout_refresh"
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/refreshLayout"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
