--- a/app/src/main/res/layout/list_item_category.xml
+++ b/app/src/main/res/layout/list_item_category.xml
@@ -5,8 +5,8 @@
 
     <data>
         <variable
-            name="category"
-            type="com.example.series_collector.data.entitiy.Category"/>
+            name="categoryContent"
+            type="com.example.series_collector.data.model.CategoryContent"/>
     </data>
 
     <LinearLayout
@@ -25,7 +25,7 @@
                 android:id="@+id/tv_category_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{category.title}"
+                android:text="@{categoryContent.category.title}"
                 android:textAppearance="?attr/textAppearanceHeadline6"
                 android:textStyle="bold"
                 android:paddingBottom="10dp"
