rename: dto, entity, domain class 구분을 위한 클래스 이름 변경

--- a/app/src/main/res/layout/list_item_home_series.xml
+++ b/app/src/main/res/layout/list_item_home_series.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="series"
-            type="com.example.series_collector.data.room.entity.Series" />
+            type="com.example.series_collector.data.room.entity.SeriesEntity" />
     </data>
 
     <androidx.cardview.widget.CardView
