--- a/app/src/main/res/layout/list_item_category.xml
+++ b/app/src/main/res/layout/list_item_category.xml
@@ -25,7 +25,7 @@
                 android:id="@+id/tv_category_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{categoryContent.categoryDto.title}"
+                android:text="@{categoryContent.title}"
                 android:textAppearance="?attr/textAppearanceHeadline6"
                 android:textStyle="bold"
                 android:paddingBottom="10dp"
