fix: API response 값이 모두 전송되지 않아 null값을 가질때 발생하는 오류수정

--- a/app/src/main/res/layout/fragment_detail_series.xml
+++ b/app/src/main/res/layout/fragment_detail_series.xml
@@ -146,7 +146,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="@dimen/margin_small"
-                        app:hashtagTotalPage="@{viewModel.seriesInfo.pageInfo.totalResults}"
+                        app:hashtagTotalPage="@{viewModel.seriesInfo.totalPage}"
                         android:textAppearance="?attr/textAppearanceSubtitle1"
                         android:textColor="?attr/colorSecondary"
                         tools:text="#회차개수"/>
