feat: 검색 화면 레이아웃 및 프래그먼트 클래스 추가

--- a/app/src/main/res/menu/bottom_navigation_bar.xml
+++ b/app/src/main/res/menu/bottom_navigation_bar.xml
@@ -6,6 +6,11 @@
         android:title="홈" />
 
     <item
+        android:id="@+id/search"
+        android:icon="@drawable/ic_baseline_search_24"
+        android:title="검색" />
+
+    <item
         android:id="@+id/inventory"
         android:icon="@drawable/ic_baseline_inventory_24"
         android:title="보관함" />
