feat: 검색 화면 리사이클러뷰 어댑터 추가 및 장르 필터링 로직 뷰로 이동

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -32,4 +32,6 @@
 
     <dimen name="inventory_item_remove_btn_size">20dp</dimen>
 
+    <dimen name="search_series_item_image_height">100dp</dimen>
+    <dimen name="search_series_item_image_width">200dp</dimen>
 </resources>
