--- a/app/src/main/res/layout/list_item_search_series.xml
+++ b/app/src/main/res/layout/list_item_search_series.xml
@@ -25,8 +25,8 @@
 
             <ImageView
                 android:id="@+id/img_series_thumbnail"
-                android:layout_width="@dimen/home_series_item_image_width"
-                android:layout_height="@dimen/home_series_item_image_height"
+                android:layout_width="@dimen/search_series_item_image_width"
+                android:layout_height="@dimen/search_series_item_image_height"
                 android:background="@drawable/round_radius_shape"
                 android:scaleType="centerCrop"
                 app:imageFromUrl="@{series.thumbnail}"
@@ -37,6 +37,7 @@
                 android:id="@+id/tv_series_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
                 android:text="@{series.name}"
                 android:textAppearance="?attr/textAppearanceListItem"
                 android:textColor="?attr/colorOnPrimary"
@@ -48,6 +49,7 @@
                 android:id="@+id/tv_series_channel_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
                 android:layout_marginTop="10dp"
                 android:text="@{series.channel}"
                 android:textAppearance="?attr/textAppearanceSubtitle2"
@@ -56,17 +58,6 @@
                 app:layout_constraintTop_toBottomOf="@+id/tv_series_title"
                 tools:text="channel name" />
 
-            <TextView
-                android:id="@+id/tv_series_genre"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="@{series.channel}"
-                android:textAppearance="?attr/textAppearanceSubtitle2"
-                android:textColor="?attr/colorSecondary"
-                app:layout_constraintStart_toEndOf="@+id/img_series_thumbnail"
-                app:layout_constraintTop_toBottomOf="@+id/tv_series_channel_name"
-                tools:text="channel name" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
