design: searchView 검색 hint 추가

--- a/app/src/main/res/layout/fragment_view_pager.xml
+++ b/app/src/main/res/layout/fragment_view_pager.xml
@@ -37,7 +37,9 @@
                 <androidx.appcompat.widget.SearchView
                     android:id="@+id/search_view"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    app:queryHint="@string/search_query_hint"
+                    />
 
             </androidx.appcompat.widget.Toolbar>
 
