--- a/app/src/main/res/layout/list_item_search_series.xml
+++ b/app/src/main/res/layout/list_item_search_series.xml
@@ -37,7 +37,7 @@
                 android:id="@+id/tv_series_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
+                android:layout_marginStart="@dimen/margin_small"
                 android:text="@{series.name}"
                 android:textAppearance="?attr/textAppearanceListItem"
                 android:textColor="?attr/colorOnPrimary"
@@ -49,12 +49,11 @@
                 android:id="@+id/tv_series_channel_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
                 android:layout_marginTop="10dp"
                 android:text="@{series.channel}"
                 android:textAppearance="?attr/textAppearanceSubtitle2"
                 android:textColor="?attr/colorSecondary"
-                app:layout_constraintStart_toEndOf="@+id/img_series_thumbnail"
+                app:layout_constraintStart_toStartOf="@+id/tv_series_title"
                 app:layout_constraintTop_toBottomOf="@+id/tv_series_title"
                 tools:text="channel name" />
 
