--- a/app/src/main/res/layout/fragment_detail_series.xml
+++ b/app/src/main/res/layout/fragment_detail_series.xml
@@ -70,7 +70,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/detail_header_margin"
+                android:layout_marginTop="@dimen/header_margin"
                 android:orientation="vertical"
                 android:paddingStart="@dimen/card_side_margin"
                 android:paddingEnd="@dimen/card_side_margin">
