--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,14 +23,14 @@
     <dimen name="home_series_item_image_height">160dp</dimen>
     <dimen name="home_series_item_image_width">280dp</dimen>
 
-    <dimen name="category_card_bottom_margin">14dp</dimen>
+    <dimen name="category_card_bottom_margin">6dp</dimen>
 
-    <dimen name="detail_header_margin">56dp</dimen>
+    <dimen name="header_margin">56dp</dimen>
 
     <dimen name="detail_thumbnail_image_height">220dp</dimen>
     <dimen name="detail_series_play_btn_size">40dp</dimen>
 
-    <dimen name="inventory_item_remove_btn_size">20dp</dimen>
+    <dimen name="inventory_item_remove_btn_size">24dp</dimen>
 
     <dimen name="search_series_item_image_height">100dp</dimen>
     <dimen name="search_series_item_image_width">200dp</dimen>
