--- a/app/src/main/res/layout/list_item_home_series.xml
+++ b/app/src/main/res/layout/list_item_home_series.xml
@@ -10,7 +10,7 @@
             type="android.view.View.OnClickListener" />
 
         <variable
-            name="series"
+            name="item"
             type="com.example.series_collector.data.model.Series" />
     </data>
 
@@ -18,7 +18,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/card_side_margin"
-        android:layout_marginBottom="@dimen/card_bottom_margin"
         android:clipChildren="true"
         android:onClick="@{clickListener}"
         app:cardBackgroundColor="@android:color/transparent"
@@ -35,7 +34,7 @@
                 android:layout_height="@dimen/home_series_item_image_height"
                 android:scaleType="centerCrop"
                 android:background="@drawable/round_radius_shape"
-                app:imageFromUrl="@{series.thumbnail}"
+                app:imageFromUrl="@{item.thumbnail}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -44,7 +43,7 @@
                 android:id="@+id/tv_series_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@{series.name}"
+                android:text="@{item.name}"
                 android:textAppearance="?attr/textAppearanceListItem"
                 android:textColor="?attr/colorOnPrimary"
                 app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +54,7 @@
                 android:id="@+id/tv_series_channel_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@{series.channel}"
+                android:text="@{item.channel}"
                 android:textAppearance="?attr/textAppearanceSubtitle2"
                 android:textColor="?attr/colorSecondary"
                 app:layout_constraintTop_toBottomOf="@+id/tv_series_title"
