--- a/app/src/main/res/layout/list_item_horizontal.xml
+++ b/app/src/main/res/layout/list_item_horizontal.xml
@@ -5,14 +5,14 @@
 
     <data>
         <variable
-            name="categoryContent"
-            type="com.example.series_collector.data.model.CategoryContent"/>
+            name="content"
+            type="com.example.series_collector.data.model.Horizontal"/>
     </data>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/category_card_bottom_margin"
+        android:layout_marginTop="18dp"
         android:orientation="vertical"
         >
 
@@ -25,7 +25,7 @@
                 android:id="@+id/tv_category_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{categoryContent.title}"
+                android:text="@{content.title}"
                 android:textAppearance="?attr/textAppearanceHeadline6"
                 android:textStyle="bold"
                 android:paddingBottom="8dp"
