--- a/app/src/main/res/layout/list_item_ad.xml
+++ b/app/src/main/res/layout/list_item_ad.xml
@@ -18,8 +18,14 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
             android:scaleType="centerCrop"
-            app:imageFromUrl="@{item.imgUrl}" />
+            app:imageFromUrl="@{item.imgUrl}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
