refactor: 레포지토리 패키지, room dao 정리

--- a/app/src/main/res/layout/list_item_series_video.xml
+++ b/app/src/main/res/layout/list_item_series_video.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="seriesVideo"
-            type="com.example.series_collector.data.model.dto.SeriesVideo" />
+            type="com.example.series_collector.data.api.model.SeriesVideo" />
     </data>
 
     <androidx.cardview.widget.CardView
