--- a/app/src/main/res/layout/fragment_detail_series.xml
+++ b/app/src/main/res/layout/fragment_detail_series.xml
@@ -86,7 +86,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/detail_thumbnail_image_height"
                         android:scaleType="centerCrop"
-                        app:imageFromUrl="@{viewModel.seriesInfo.series.thumbnail}"
+                        app:imageFromUrl="@{viewModel.series.thumbnail}"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -120,7 +120,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/margin_small"
-                    android:text="@{viewModel.seriesInfo.series.name}"
+                    android:text="@{viewModel.series.name}"
                     android:textAppearance="?attr/textAppearanceHeadline5"
                     android:textColor="?attr/colorOnPrimary"
                     android:textStyle="bold"
@@ -132,7 +132,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/margin_normal"
                     android:maxLines="@integer/detail_descpription_max_lines"
-                    android:text="@{viewModel.seriesInfo.series.description}"
+                    android:text="@{viewModel.series.description}"
                     android:textAppearance="?attr/textAppearanceSubtitle1"
                     android:textColor="?attr/colorSecondary"
                     tools:text="description about the series" />
