feature: 인벤토리 시리즈 클릭시 디테일 이동 네비게이션 추가 + 코드 정리

--- a/app/src/main/res/layout/list_item_inventory_series.xml
+++ b/app/src/main/res/layout/list_item_inventory_series.xml
@@ -5,9 +5,6 @@
 
     <data>
         <variable
-            name="clickListener"
-            type="android.view.View.OnClickListener"/>
-        <variable
             name="series"
             type="com.example.series_collector.data.model.Series" />
     </data>
@@ -63,7 +60,7 @@
             android:id="@+id/btn_delete"
             android:layout_width="@dimen/inventory_item_remove_btn_size"
             android:layout_height="@dimen/inventory_item_remove_btn_size"
-            android:background="@drawable/ic_baseline_remove_circle_outline_24"
+            android:background="@drawable/ic_close_24"
             android:layout_gravity="right"/>
 
     </androidx.cardview.widget.CardView>
