--- a/app/src/main/res/layout/list_item_ad.xml
+++ b/app/src/main/res/layout/list_item_ad.xml
@@ -6,27 +6,46 @@
     <data>
 
         <variable
+            name="order"
+            type="String" />
+
+        <variable
+            name="total"
+            type="String" />
+
+        <variable
             name="item"
-            type="com.example.series_collector.data.model.Ad"/>
+            type="com.example.series_collector.data.model.Ad" />
     </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
             android:scaleType="centerCrop"
+            android:background="@drawable/round_radius_shape"
             app:imageFromUrl="@{item.imgUrl}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1/3"
+            android:layout_marginEnd="6dp"
+            android:layout_marginBottom="6dp"
+            android:gravity="center_horizontal"
+            android:textAppearance="?attr/textAppearanceCaption"
+            android:textColor="?attr/colorOnPrimary"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView"
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
