--- a/app/src/main/res/navigation/home_graph.xml
+++ b/app/src/main/res/navigation/home_graph.xml
@@ -9,7 +9,7 @@
         android:id="@+id/homeFragment"
         android:name="com.example.series_collector.ui.home.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home_series">
+        tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/action_home_fragment_to_detail_fragment"
             app:destination="@id/detailFragment"
