--- a/app/src/main/res/navigation/inventory_graph.xml
+++ b/app/src/main/res/navigation/inventory_graph.xml
@@ -10,5 +10,24 @@
         android:name="com.example.series_collector.ui.Inventory.InventoryFragment"
         android:label="fragment_inventory"
         tools:layout="@layout/fragment_inventory">
+
+        <action
+            android:id="@+id/action_inventory_fragment_to_detail_fragment"
+            app:destination="@id/detailFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/detailFragment"
+        android:name="com.example.series_collector.ui.detail.DetailFragment"
+        android:label="fragment_detail"
+        tools:layout="@layout/fragment_detail_series">
+
+        <argument
+            android:name="seriesId"
+            app:argType="string" />
     </fragment>
 </navigation>
