--- a/app/src/main/res/layout/list_item_series_episode.xml
+++ b/app/src/main/res/layout/list_item_series_episode.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="seriesEpisode"
-            type="com.example.series_collector.data.api.model.SeriesEpisode" />
+            type="com.example.series_collector.data.source.remote.api.model.SeriesEpisode" />
     </data>
 
     <androidx.cardview.widget.CardView
