--- a/app/src/main/res/layout/list_item_search_series.xml
+++ b/app/src/main/res/layout/list_item_search_series.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="series"
-            type="com.example.series_collector.data.model.Series" />
+            type="com.example.series_collector.data.model.series.Series" />
     </data>
 
     <androidx.cardview.widget.CardView
@@ -29,7 +29,7 @@
                 android:layout_height="@dimen/search_series_item_image_height"
                 android:background="@drawable/round_radius_shape"
                 android:scaleType="centerCrop"
-                app:imageFromUrl="@{series.thumbnail}"
+                app:imageFromUrl="@{series.thumbnailUrl}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
