refactor: 패키지, 코드 정리

--- a/app/src/main/res/layout/list_item_inventory_series.xml
+++ b/app/src/main/res/layout/list_item_inventory_series.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="series"
-            type="com.example.series_collector.data.model.series.Series" />
+            type="com.example.series_collector.model.series.Series" />
     </data>
 
     <androidx.cardview.widget.CardView
