--- a/app/src/main/res/layout/list_item_ad.xml
+++ b/app/src/main/res/layout/list_item_ad.xml
@@ -15,7 +15,7 @@
 
         <variable
             name="item"
-            type="com.example.series_collector.data.model.category.Ad" />
+            type="com.example.series_collector.model.category.Ad" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
