--- a/app/src/main/res/layout/list_item_horizontal.xml
+++ b/app/src/main/res/layout/list_item_horizontal.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="content"
-            type="com.example.series_collector.data.model.category.Horizontal"/>
+            type="com.example.series_collector.model.category.Horizontal"/>
     </data>
 
     <LinearLayout
