--- a/app/src/main/res/layout/list_item_series_episode.xml
+++ b/app/src/main/res/layout/list_item_series_episode.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="episode"
-            type="com.example.series_collector.data.model.episode.Episode" />
+            type="com.example.series_collector.model.episode.Episode" />
     </data>
 
     <androidx.cardview.widget.CardView
